--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.mobile.android-logcat": "1.2.3",
     "com.unity.mobile.notifications": "1.4.2",
     "com.unity.performance.profile-analyzer": "1.0.3",
+    "com.unity.postprocessing": "3.1.1",
     "com.unity.quicksearch": "2.0.2",
     "com.unity.test-framework": "1.1.30",
     "com.unity.textmeshpro": "3.0.6",
