--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.adaptiveperformance.samsung.android": "4.0.2",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.mobile.notifications": "2.1.1",
     "com.unity.performance.profile-analyzer": "1.2.2",
